# mini-chess

./: bit_board.py  mini_chess.py  pyproject.toml  readme.md  setup.cfg  setup.py
src/mini_chess/: bit_board.py  board_example.py  mini_chess.py
src/mini_chess.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
