[metadata]
name = mini_chess
version = 0.0.3
author = jimherefornonsense
author_email = jim.zijingzhou.tw@gmail.com
description = A minimal chess engine for AI research
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/jimherefornonsense/mini_chess

[options]
packages = find:

[options.packages.find]
where = src